add more validations and add flash and bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Really Cool Recipes</h1>
+      </div>
+      <%= flash[:alert] %>
+      <%= flash[:notice] %>
+      <%= yield %>
+
+    </div>
   </body>
 </html>
