--- a/app/views/layouts/_ingredient_form.html.erb
+++ b/app/views/layouts/_ingredient_form.html.erb
@@ -3,5 +3,7 @@
 <%= form_for @ingredient do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
+  <%= f.label :measurement %>
+  <%= f.text_field :measurement %>
   <%= f.submit %>
 <% end %>
