--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,6 +3,22 @@
 <h3><%= @recipe.directions %></h3>
 
 
+<% if @recipe.ingredients.any? %>
+  <h4>Here are the ingredients for this recipe:</h4>
+
+  <% @recipe.ingredients.each do |ingredient| %>
+    <ul>
+      <li>
+        <%= link_to ingredient.name, recipe_ingredient_path(@recipe, ingredient) %>
+      </li>
+    </ul>
+  <% end %>
+<% else %>
+  <p>No ingredients are listed for this recipe.</p>
+<% end %>
+
+
+
 <p><%= link_to "Edit", edit_recipe_path(@recipe) %></p>
 <p><%= link_to "Delete", recipe_path(@recipe),
   :data => {:confirm => "You sure?",
