add code to update method to link many to many relationship

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,8 +1,19 @@
 <h1><%= @ingredient.name %></h1>
 <h1><%= @ingredient.measurement %></h1>
 
+<% if @ingredient.recipes.any? %>
+  <h4>Here are the recipe for this ingredient:</h4>
 
-
+  <% @ingredient.recipes.each do |recipe| %>
+    <ul>
+      <li>
+        <%= link_to recipe.name, ingredient_recipe_path(@ingredient, recipe) %>
+      </li>
+    </ul>
+  <% end %>
+<% else %>
+  <p>No recipes are listed for this ingredient.</p>
+<% end %>
 
 <p><%= link_to "Edit", edit_ingredient_path(@ingredient) %></p>
 <p><%= link_to "Delete ingredient", ingredient_path(@ingredient),
