reseed database and add CSS

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -5,7 +5,7 @@
   <input type="hidden" name="alphabetize">
 </form> -->
 
-  <li><%= link_to "alphabetize", recipes_path("alphabetize") %></li>
+  <p><%= link_to "Alphabetize List", recipes_path("alphabetize") %></p>
 
 <% if @recipes.any? %>
   <ul>
