--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,27 @@
  // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.jumbotron {
+  text-align: center;
+  margin: 20px;
+  background-color: #f2ffe6;
+  border: solid 2px #264d00;
+}
+
+body {
+  text-align: center;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROBrL6tL1NLZ0DNCWpjiFdLDuqWrduzHt6ScFMO7mdy2lkjlei2Q&s");
+  font-family: 'Pacifico', cursive;
+}
+
+.card {
+  background-color: #f2ffe6;
+  padding: 20px;
+  min-height: 400px;
+  border: solid 2px #264d00;
+}
+
+img {
+  border: solid 2px #264d00;
+}
