--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @recipe.name %></h1>
 <img src= <%= @recipe.img %> alt="">
-<h3><%= @recipe.directions %></h3>
+<h3>Directions: <%= @recipe.directions %></h3>
 
 
 <% if @recipe.ingredients.any? %>
