--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Ingredients</h1>
 
 <% if @ingredients.any? %>
-  <ul>
+
     <% @ingredients.each do |ingredient| %>
-      <li><%= link_to ingredient.name, ingredient_path(ingredient) %></li>
+      <p><%= link_to ingredient.name, ingredient_path(ingredient) %></p>
     <% end %>
-  </ul>
+
 <% else %>
   <p>There are no ingredients yet.</p>
 <% end %>
